fixed fore config to z-index 5

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -72,7 +72,7 @@ label .navigation {
 .parallax_layer--fore {
     -webkit-transform: translateZ(90px) scale(.7);
     transform: translateZ(90px) scale(.7);
-    z-index: 1;
+    z-index: 5;
 }
 
 .parallax_layer--base {
